test/ui/tests/lowering/numeric-attribute-argument-out-of-range.lushui
;;; TEST fail check

@(recursion-limit 130'454'112'009'021)
module dummy of
